# trading-bot-angel

./: .gitignore  EDA_token.ipynb  README.md  app.py  auth.py  fetching_token_equity.py  fetching_token_option_index.py  historical_data.csv  historical_data.ipynb  main.py  nse_stocks.csv  order.ipynb  order.py  pyproject.toml  tele_bot.py  to_implement.py
experimental_files/: EDA_token.ipynb  option_chain.ipynb  tele_bot.py
historical_data/: historical_data.ipynb  nse_stocks.csv
templates/: historical_data.html  index.html
